--- a/main.html
+++ b/main.html
@@ -1,7 +1,9 @@
 <head>
-  <title>communify</title>
+
 </head>
 
 <body>
-  {{> applicationPage}}
+		
+		<!-- topBar.html -->
+		{{> applicationPage}}
 </body>
