--- a/main.html
+++ b/main.html
@@ -1,9 +1,7 @@
 <head>
-
+ <title>Communify</title>
 </head>
 
-<body>
-		
-		<!-- topBar.html -->
-		{{> applicationPage}}
+<body> 
+		{{> home}}
 </body>
