I did some stuff

--- a/application/application.html
+++ b/application/application.html
@@ -1,14 +1,30 @@
 <template name ="application">
 
-  <section id="about" style ="background-color:gray" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a premium quality, free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, all you need to do is download the template on the preview page. You can use this template for any purpose, personal or commercial.</p>
-                <p>This striking, black and white theme features stock photographs by Gratisography along with a custom Google Map skin courtesy of Snazzy Maps.</p>
-                <p>With this template, just the slightest splash of color can make a huge impact on the overall presentation and design.</p>
-            </div>
-        </div>
-  </section>
+  <div class="section group">
+	<div class="col span_1_of_4">
+		<h3>Buy/Sell</h3>
+		<ul id="UL_1">
+			<li id="LI_1">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Textbooks (125)</a>
+			</li>
+			<li id="LI_2">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Bikes (12)</a>
+			</li>
+			<li id="LI_3">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Household (35)</a>
+			</li>
+		</ul>
+	</div>
+	<div class="col span_1_of_4">
+		<h3>Housing</h3>
+	</div>
+	<div class="col span_1_of_4">
+		<h3>Jobs</h3>
+	</div>
+	<div class="col span_1_of_4">
+		<h3>Community</h3>
+	</div>
+</div>
+
   
 </template>
