--- a/application/application.html
+++ b/application/application.html
@@ -1,5 +1,7 @@
 <template name ="application">
 
+
+	
   <div class="section group">
 	<div class="col span_1_of_4">
 		<h3>Buy/Sell</h3>
@@ -13,10 +15,21 @@
 			<li id="LI_3">
 				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Household (35)</a>
 			</li>
+			<li id="LI_4">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">More Bikes! (5)</a>
+			</li>
+			<li id="LI_4">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Event Tickets! (5)</a>
+			</li>
 		</ul>
 	</div>
 	<div class="col span_1_of_4">
 		<h3>Housing</h3>
+			<ul id="UL_1">
+				<li id="LI_1">
+					<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Looking for Roommates (17)</a>
+				</li>
+			</ul>
 	</div>
 	<div class="col span_1_of_4">
 		<h3>Jobs</h3>
