cleaned up .css and colored some elements

--- a/application/application.html
+++ b/application/application.html
@@ -1,8 +1,6 @@
 <template name ="application">
-
-
 	
-  <div class="section group">
+  <div class="section group" style = "list-style: none">
 	<div class="col span_1_of_4">
 		<h3>Buy/Sell</h3>
 		<ul id="UL_1">
