--- a/home/home.html
+++ b/home/home.html
@@ -10,9 +10,7 @@
                         <h1 class="brand-heading">Communify</h1>
                         <p class="intro-text">Centering the community</p>
                         <div class="page-scroll">
-                            <a href="#about" class="btn btn-circle">
-                                <i class="fa fa-angle-double-down animated"></i>
-                            </a>
+                         Sign up
                         </div>
                     </div>
                 </div>
