Greg’s category changes

--- a/application/application.html
+++ b/application/application.html
@@ -2,38 +2,96 @@
 	
   <div class="section group" style = "list-style: none">
 	<div class="col span_1_of_4">
-		<h3>Buy/Sell</h3>
-		<ul id="UL_1">
+		<h3 class ="titles">For Sale</h3>
+		<!-- <ul id="UL_1"> -->
+			<li id="LI_1"> 
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Textbooks (125)</a>
+			</li> 
+			<li id="LI_1">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Bikes (12)</a>
+			</li>
+			<li id="LI_1">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Household (35)</a>
+			</li>
+			<li id="LI_1">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">More Bikes! (5)</a>
+			</li>
+			<li id="LI_1">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Event Tickets! (5)</a>
+			</li>
 			<li id="LI_1">
 				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Textbooks (125)</a>
 			</li>
-			<li id="LI_2">
+			<li id="LI_1">
 				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Bikes (12)</a>
 			</li>
-			<li id="LI_3">
+			<li id="LI_1">
 				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Household (35)</a>
 			</li>
-			<li id="LI_4">
+			<li id="LI_1">
 				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">More Bikes! (5)</a>
 			</li>
-			<li id="LI_4">
+			<li id="LI_1">
 				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Event Tickets! (5)</a>
 			</li>
-		</ul>
+			<li id="LI_1">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Textbooks (125)</a>
+			</li>
+			<li id="LI_1">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Bikes (12)</a>
+			</li>
+			<li id="LI_1">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Household (35)</a>
+			</li>
+			<li id="LI_1">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">More Bikes! (5)</a>
+			</li>
+			<li id="LI_1">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Event Tickets! (5)</a>
+			</li>
+		<!-- </ul> -->
 	</div>
 	<div class="col span_1_of_4">
-		<h3>Housing</h3>
-			<ul id="UL_1">
+		<h3 class ="titles">Housing</h3>
 				<li id="LI_1">
-					<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Looking for Roommates (17)</a>
+					<a class = "category" href="/search?q=category%3AChild+Care+Needed" id="A_5">Looking for Roommates (17)</a>
 				</li>
-			</ul>
 	</div>
 	<div class="col span_1_of_4">
-		<h3>Jobs</h3>
+		<h3 class ="titles">Community</h3>
+			<li id="LI_1">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Textbooks (125)</a>
+			</li>
+			<li id="LI_1">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Bikes (12)</a>
+			</li>
+			<li id="LI_1">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Household (35)</a>
+			</li>
+			<li id="LI_1">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">More Bikes! (5)</a>
+			</li>
+			<li id="LI_1">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Event Tickets! (5)</a>
+			</li>
 	</div>
 	<div class="col span_1_of_4">
-		<h3>Community</h3>
+		<h3 class ="titles">Jobs</h3>
+			<li id="LI_1">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Textbooks (125)</a>
+			</li>
+			<li id="LI_1">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Bikes (12)</a>
+			</li>
+			<li id="LI_1">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Household (35)</a>
+			</li>
+			<li id="LI_1">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">More Bikes! (5)</a>
+			</li>
+			<li id="LI_1">
+				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Event Tickets! (5)</a>
+			</li>
 	</div>
 </div>
 
