--- a/application/application.html
+++ b/application/application.html
@@ -5,92 +5,83 @@
 		<h3 class ="titles">For Sale</h3>
 		<!-- <ul id="UL_1"> -->
 			<li id="LI_1"> 
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Textbooks (125)</a>
+				<a href="url" id="A_5">Textbooks (125)</a>
 			</li> 
 			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Bikes (12)</a>
+				<a href="url" id ="A_5">Tickets (12)</a>
 			</li>
 			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Household (35)</a>
+				<a href="url" id="A_5">Household (10)</a>
 			</li>
 			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">More Bikes! (5)</a>
+				<a href="url" id="A_5">Clothes and Accessories (40)</a>
 			</li>
 			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Event Tickets! (5)</a>
+				<a href="url" id="A_5">Electronics (5)</a>
 			</li>
 			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Textbooks (125)</a>
+				<a href="url" id="A_5">Health & Beauty (3)</a>
 			</li>
 			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Bikes (12)</a>
+				<a href="url" id="A_5">Free (12)</a>
 			</li>
 			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Household (35)</a>
+				<a href="url" id="A_5">Sports/Recreation (35)</a>
 			</li>
 			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">More Bikes! (5)</a>
+				<a href="url" id="A_5">Vehicles (5)</a>
 			</li>
 			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Event Tickets! (5)</a>
+				<a href="url" id="A_5">Wanted (10)</a>
 			</li>
 			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Textbooks (125)</a>
+				<a href="url" id="A_5">Yard Sale/ Moving Sale (125)</a>
 			</li>
 			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Bikes (12)</a>
-			</li>
-			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Household (35)</a>
-			</li>
-			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">More Bikes! (5)</a>
-			</li>
-			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Event Tickets! (5)</a>
+				<a href="url" id="A_5">Miscellaneous (125)</a>
 			</li>
 		<!-- </ul> -->
 	</div>
 	<div class="col span_1_of_4">
 		<h3 class ="titles">Housing</h3>
 				<li id="LI_1">
-					<a class = "category" href="/search?q=category%3AChild+Care+Needed" id="A_5">Looking for Roommates (17)</a>
+					<a class = "category" href="url" id="A_5">Looking for Roommates (17)</a>
 				</li>
 	</div>
 	<div class="col span_1_of_4">
 		<h3 class ="titles">Community</h3>
 			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Textbooks (125)</a>
+				<a href="url" id="A_5">Textbooks (125)</a>
 			</li>
 			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Bikes (12)</a>
+				<a href="url" id="A_5">Household(12)</a>
 			</li>
 			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Household (35)</a>
+				<a href="url" id="A_5">(35)</a>
 			</li>
 			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">More Bikes! (5)</a>
+				<a href="url" id="A_5">More Bikes! (5)</a>
 			</li>
 			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Event Tickets! (5)</a>
+				<a href="url" id="A_5">Event Tickets! (5)</a>
 			</li>
 	</div>
 	<div class="col span_1_of_4">
 		<h3 class ="titles">Jobs</h3>
 			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Textbooks (125)</a>
+				<a href="url" id="A_5">Textbooks (125)</a>
 			</li>
 			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Bikes (12)</a>
+				<a href="url" id="A_5">Bikes (12)</a>
 			</li>
 			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Household (35)</a>
+				<a href="url" id="A_5">Household (35)</a>
 			</li>
 			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">More Bikes! (5)</a>
+				<a href="url" id="A_5">More Bikes! (5)</a>
 			</li>
 			<li id="LI_1">
-				<a href="/search?q=category%3AChild+Care+Needed" id="A_5">Event Tickets! (5)</a>
+				<a href="url" id="A_5">Event Tickets! (5)</a>
 			</li>
 	</div>
 </div>
