--- a/home/topBar.html
+++ b/home/topBar.html
@@ -2,12 +2,12 @@
 
 <nav class="navbar navbar-custom navbar-static-top" role="navigation">
         <div class="container">
-            <div class="navbar-header page-scroll" style ="display: table">
+            <div class="navbar-header page-scroll" id = "searchbar">
                 {{>search}}
             </div>
 
             <!-- Collect the Home, Locate, and Login buttons -->
-            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+            <div class="navbar-collapse navbar-right">
                 <ul class="nav navbar-nav">
 
                     <li class="page-scroll">
