--- a/client/home/topBar.html
+++ b/client/home/topBar.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-custom navbar-static-top" role="navigation">
         <div class="container">
-            <div class="navbar-header page-scroll" id = "searchbar">
+            <div class="navbar-header page-scroll searchbar">
                 {{>search}}
             </div>
 
@@ -22,3 +22,4 @@
     </nav>
     
 </template>
+
